# rust-test2

./: .gitignore  Cargo.toml  schema.sql  wrangler.toml
src/: lib.rs
src/routes/: auth.rs  codewhize.rs  delete.rs  hello_world.rs  mod.rs  read.rs  shop_name.rs  token.rs  update.rs
