[package]
name = "test2"
version = "0.1.0"
edition = "2021"
authors = [ "kushwahshani <sanikushwah3190@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features = ["d1"] }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1", features = ["v4","js"] }
url = "2.2"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.12.12", features = ["json"] }


